// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not show cartpopover 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1999dd;
  border-color: #1999dd;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  min-width: 100px;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  position: relative;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c0:hover {
  background-color: #25b0f9;
  border-color: #25b0f9;
  color: #ffffff;
}

.c0:active {
  background-color: #057dbe;
  border-color: #057dbe;
  color: #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  padding-left: 20px;
  -webkit-transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
  transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
}

.c1 svg path,
.c1 svg rect {
  fill: #ffffff;
}

<div
  className="MuiPrivateHiddenCss-mdUp-16"
>
  <div
    className="SkCartPopover-container-1 SkCartPopover-isContainerHidden-3"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 SkCartPopover-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 SkCartPopover-containerItem-5"
      >
        <img
          alt="Item Title"
          className="SkCartPopover-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body2-129 SkCartPopover-addedToCartText-8"
        >
          10
           "
          <span
            className="SkCartPopover-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <div
          className="c0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div>
            Checkout
          </div>
          <div
            className="c1"
            style={
              Object {
                "opacity": 0,
                "paddingLeft": 0,
                "width": 0,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show cartpopover 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1999dd;
  border-color: #1999dd;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  min-width: 100px;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  position: relative;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c0:hover {
  background-color: #25b0f9;
  border-color: #25b0f9;
  color: #ffffff;
}

.c0:active {
  background-color: #057dbe;
  border-color: #057dbe;
  color: #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  padding-left: 20px;
  -webkit-transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
  transition: width 0.2s ease-out 0s,padding-left 0.2s ease-out 0s,opacity 0.2s ease-out 0.2s;
}

.c1 svg path,
.c1 svg rect {
  fill: #ffffff;
}

<div
  className="MuiPrivateHiddenCss-mdUp-16"
>
  <div
    className="SkCartPopover-container-1 SkCartPopover-isContainerVisible-4"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 SkCartPopover-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 SkCartPopover-containerItem-5"
      >
        <img
          alt="Item Title"
          className="SkCartPopover-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body2-129 SkCartPopover-addedToCartText-8"
        >
          10
           "
          <span
            className="SkCartPopover-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <div
          className="c0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div>
            Checkout
          </div>
          <div
            className="c1"
            style={
              Object {
                "opacity": 0,
                "paddingLeft": 0,
                "width": 0,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
